--- a/css/index.css
+++ b/css/index.css
@@ -1,42 +1,31 @@
-/*css*/
-@charset "utf-8"; 
-body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, pre, 
-dl, dt, dd, ul, ol, li, th, td, div, span, img, 
-fieldset, lengend, button, input, select, textarea{margin: 0;padding: 0;} 
-/* color & background */ 
-html{color:#000; background:#FFF;} 
-/* font */ 
-body, button, input, select, textarea { /* for ie */ 
-font: 12px/18px Arial, Verdana, Microsoft YaHei; 
-} 
-/* fix center */ 
-html,body {height: 100%;margin: 0 auto;} 
-/* h1~h6 */ 
-h1 {font-size: 18px;} 
-h2 {font-size: 16px;} 
-h3 {font-size: 14px;} 
-h4, h5, h6 {font-size: 100%;} 
-/* a */ 
-a { text-decoration: none; } 
-a:hover { text-decoration: underline; } 
-/* list */ 
-ul,ol {list-style: none;} 
-/* img border */ 
-fieldset,img{border: 0} 
-/* table */ 
-table {border-collapse: collapse;border-spacing: 0;font:inherit;} 
-/* margin */ 
-.alpha {margin-left: 0;} 
-.omega {margin-right: 0;} 
-/* float & clear */ 
-.left{float:left;} 
-.right{float:right;} 
-.clear {clear: both;display: block;} 
-/* clearfix */ 
-.clearfix:after{content:".";display:block;} 
-.clearfix{display:inline-table;} 
-/* Hides from IE-mac */ 
-* html .clearfix{height:1%;} 
-.clearfix{display:block;} 
-/* End hide from IE-mac */ 
-*+html .clearfix{min-height:1%;}/* IE7 */ 
+body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td{margin:0;padding:0}
+html{color:#000;overflow-y:scroll;overflow:-moz-scrollbars-vertical}
+body,button,input,select,textarea{font-size:12px;font-family:arial,'Hiragino Sans GB','Microsoft Yahei','微软雅黑','宋体',\5b8b\4f53,Tahoma,Arial,Helvetica,STHeiti}
+h1,h2,h3,h4,h5,h6{font-size:100%}
+em{font-style:normal}
+small{font-size:12px}
+ul,ol{list-style:none}
+a{text-decoration:none}
+a:hover{text-decoration:underline}
+legend{color:#000}
+fieldset,img{border:0}
+button,input,select,textarea{font-size:100%}
+table{border-collapse:collapse;border-spacing:0}
+img{-ms-interpolation-mode:bicubic}
+textarea{resize:vertical}
+.left{float:left}
+.right{float:right}
+.overflow{overflow:hidden}
+.hide{display:none}
+.block{display:block}
+.inline{display:inline}
+.error{color:#F00;font-size:12px}
+label,button{cursor:pointer}
+.clearfix:after{content:'\20';display:block;height:0;clear:both}
+.clearfix{zoom:1}.clear{clear:both;height:0;line-height:0;font-size:0;visibility:hidden;overflow:hidden}
+.wordwrap{word-break:break-all;word-wrap:break-word}
+pre.wordwrap{white-space:pre-wrap}
+body{text-align:center}
+body,form{position:relative}
+td{text-align:left}
+img{border:0}
