--- a/css/style.css
+++ b/css/style.css
@@ -112,11 +112,11 @@ body {
     background-color: #fff;
     border: 1px #d7d7d7 solid;
     border-right: 0;
-    border-radius: 5px 0 0 5px;  
+    border-radius: 5px 0 0 5px;
 }
 
 #web #top #search #search_1 {
-	float: left; padding-left: 10px; width: 560px; height: 38px; font-weight: 400;
+	float: left; padding-left: 10px; width: 560px; height: 38px; font-weight: 400px;
     font-size: 16px;
     color: #333;
     font-family: "Microsoft Yahei","Heiti SC";
@@ -133,7 +133,7 @@ body {
 }
 
 #web #top .search-button-box .search-button { 
-	background-image: url(https://res.hao1258.com/styles/front/img/home/all_in_one_blue.png);
+	background-image: url(/img/all_in_one_blue.png);
 	position: absolute;
     width: 20px;
     height: 20px;
@@ -154,5 +154,17 @@ body {
 
 /*底部*/
 
-#bot {}
+#bot {
+	position: fixed;
+	z-index: 1;
+	bottom: 0;
+	width: 100%;
+}
 
+#bot #music {
+	float: left; margin: 5px; width: 300px; height: 54px;
+}
+
+#bot #github {
+	float: right; margin: 22px 10px 5px;
+}
