--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
 	z-index: 1;
 	top: 104px;
 	width: 100%;
-    height: 158px;
+    height: 358px;
     /*line-height: 500px;
     text-align: center;
     border: 1px solid #000;
@@ -104,7 +104,7 @@ body {
     height: 70px;
 }
 
-#web #top {
+/*#web #top {
 	margin: 44px auto 0; width: 643px; height: 44px;
 }
 
@@ -148,7 +148,7 @@ body {
     background-repeat: no-repeat;
     background-size: auto 40px;
     background-position: -840px 0;
-}
+}*/
 
 #head {}
 
