--- a/css/style.css
+++ b/css/style.css
@@ -83,10 +83,10 @@ body {
 
 #web {
 	position: fixed;
-	z-index: 1;
-	top: 104px;
+	z-index: 2;
+	top: 90px;
 	width: 100%;
-    height: 658px;
+    /*height: 658px;*/
     /*line-height: 500px;
     text-align: center;
     border: 1px solid #000;
@@ -112,7 +112,7 @@ body {
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    top:60%;
+    margin-top: 300px;
     left:50%;
 }
 
@@ -149,7 +149,7 @@ body {
 /*快捷导航栏*/
 #kj {
 	position: fixed;
-	/*z-index: 1;*/
+	z-index: 1;
 	top: 400px;
 	width: 100%;
 }
