--- a/css/search-form.css
+++ b/css/search-form.css
@@ -6,7 +6,7 @@ body {padding: 0px; margin:0px; background-position: center; background-size: co
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    top:25%;
+    top:140px;
     left:50%;
 }
 .search-wrapper.active {}
