--- a/css/default.css
+++ b/css/default.css
@@ -44,7 +44,7 @@ body{
 	font-size: 1.05em;
 	font-family: "Microsoft YaHei","宋体","Segoe UI", "Lucida Grande", Helvetica, Arial,sans-serif, FreeSans, Arimo;
 }
-a{color: #2fa0ec;text-decoration: none;outline: none;}
+ a{/*color: #2fa0ec;*/text-decoration: none;outline: none;} 
 a:hover,a:focus{color:#74777b;}
 
 .htmleaf-container{
