--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,8 @@ body {
 line-height: 40px; font-size: 14px;}
 #kj #jk_a #ul1 li:hover{background: #86b8b1;}
 
-
+.top11{display: none;}
+#ul1{}
 
 
 
