--- a/demo/css/search-form.css
+++ b/demo/css/search-form.css
@@ -21,11 +21,12 @@ body {padding: 0px; margin:0px; background-position: center; background-size: co
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+    box-shadow: 2px 4px 12px rgb(0 0 0 / 8%);
 }
 .search-wrapper.active .input-holder {
     border-radius: 50px;
     width:450px;
-    background: rgba(0,0,0,0.23);
+    background: rgb(0 0 0 / 8%);
     -webkit-transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     -moz-transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
@@ -43,20 +44,22 @@ body {padding: 0px; margin:0px; background-position: center; background-size: co
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    border:none;
-    outline:none;
-    font-family:"Open Sans", Arial, Verdana;
+    border:
+    none;
+    outline:
+    none;
+    font-family:
+    "Open Sans", Arial, Verdana;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
-    color:#FFF;
+    color: #703737;
     -webkit-transform: translate(0, 60px);
     -moz-transform: translate(0, 60px);
     transform: translate(0, 60px);
     -webkit-transition: all .3s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     -moz-transition: all .3s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     transition: all .3s cubic-bezier(0.000, 0.105, 0.035, 1.570);
-
     -webkit-transition-delay: 0.3s;
     -moz-transition-delay: 0.3s;
     transition-delay: 0.3s;
@@ -114,7 +117,7 @@ body {padding: 0px; margin:0px; background-position: center; background-size: co
     content:'';
 }
 .search-wrapper .input-holder .search-icon span::before {
-    width: 4px;
+    width: 6px;
     height: 11px;
     left: 9px;
     top: 18px;
@@ -124,9 +127,9 @@ body {padding: 0px; margin:0px; background-position: center; background-size: co
 .search-wrapper .input-holder .search-icon span::after {
     width: 20px;
     height: 20px;
-    left: 1px;
+    left: 2px;
     top: 0px;
-    border-radius: 16px;
+    border-radius: 15px;
     border: 4px solid #974BE0;
 }
 
