--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -68,6 +68,12 @@ html, body {
     height: 40px;
     padding: 1px;
 }
+.w2 {
+    width: 40px;
+    height: 40px;
+    padding: 1px;
+    float: left;
+}
 /*搜索ajx*/
 
 #search_ajx {
@@ -128,6 +134,15 @@ html, body {
     height: 20px;
     margin-top: 5px;
     white-space:nowrap;
+}
+
+.t2 {
+    line-height: 30px;
+    height: 30px;
+    margin-top: 5px;
+    margin-left: 5px;
+    white-space:nowrap;
+    float: left;
 }
 
 
