--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-<!--基本格式去除-->
+/**基本格式去除**/
 
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td{margin:0;padding:0}
 a:hover {text-decoration:none}
@@ -12,8 +12,13 @@ html, body {
     padding: 0;
     background: #f8f8f8;
 }
+/**基本格式去除**/
 
-<!--基本格式去除-->
+.mr-3 {
+    margin-right: 1rem;
+}
+
+/**boostrap补全**/
 
 .background {
     position: absolute;
