--- a/css/search-form.css
+++ b/css/search-form.css
@@ -26,7 +26,7 @@ body {padding: 0px; margin:0px; background-position: center; background-size: co
 .search-wrapper.active .input-holder {
     border-radius: 50px;
     width:450px;
-    background: rgb(0 0 0 / 8%);
+    background: rgb(0 0 0 / 5%);
     -webkit-transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     -moz-transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
@@ -166,7 +166,7 @@ body {padding: 0px; margin:0px; background-position: center; background-size: co
 .search-wrapper .close::before, .search-wrapper .close::after {
     position:absolute;
     content:'';
-    background: #bfbfbf;
+    background: #bfbfbfb5;
     border-radius: 2px;
 }
 .search-wrapper .close::before {
