--- a/css/manager-styles.css
+++ b/css/manager-styles.css
@@ -171,7 +171,7 @@ body {
     height: 50px;
     border-radius: 50%;
     background-color: var(--dark-color);
-    color: white;
+    color: var(--text-light);
     border: none;
     box-shadow: var(--shadow);
     display: flex;
